# serenity

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  config.json  serenity.json
include/: instance.h  serenity.h  window.h
include/engine/: engine.h  window.h
include/spdlog/: async.h  async_logger-inl.h  common-inl.h  formatter.h  logger-inl.h  logger.h  spdlog.h  stopwatch.h
include/spdlog/cfg/: helpers.h
include/spdlog/details/: backtracer.h  console_globals.h  file_helper-inl.h  file_helper.h  log_msg-inl.h  log_msg.h  mpmc_blocking_q.h  null_mutex.h  os.h  periodic_worker-inl.h  registry.h
include/spdlog/fmt/bundled/: args.h  compile.h  core.h  format.h  os.h  ostream.h  xchar.h
include/spdlog/sinks/: ansicolor_sink.h  dist_sink.h  hourly_file_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  stdout_sinks.h  udp_sink.h  win_eventlog_sink.h
src/: hello_triangle_application.cpp  instance.cpp  main.cpp  serenity.cpp  window.cpp
src/engine/: engine.cpp  window.cpp
src/spdlog/: fmt.cpp  stdout_sinks.cpp
test/: test.cpp
